2011-04-29  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/Makefile: Use option --batch.  New target TAGS.

2011-04-29  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el, lisp/bbdb-com.el, lisp/bbdb-migrate.el,
	lisp/bbdb-print.el: Rename degree field to affix.

2011-04-29  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-display-name-organization): Include name in
	text property.
	(bbdb-scan-property): New function.
	(bbdb-next-record, bbdb-prev-record): Use it.
	(bbdb-next-field, bbdb-prev-field): New commands bound to "N" and
	"P".

2011-04-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-pop-up-window): Rename from
	bbdb-pop-up-buffer.
	* lisp/bbdb.el (bbdb-display-records-internal)
	* lisp/bbdb-com.el (bbdb-complete-mail): Use new name.

2011-04-23  Leo  <sdl.web@gmail.com>
	* lisp/bbdb.el (bbdb-pop-up-buffer): Distinguish 1 and 1.0 in
	bbdb-pop-up-window-size.

2011-04-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-message.el (bbdb-insinuate-message)
	(bbdb-insinuate-mail)
	* lisp/bbdb-rmail.el (bbdb-insinuate-rmail)
	* lisp/bbdb-gnus.el (bbdb-insinuate-gnus)
	* lisp/bbdb-mhe.el (bbdb-insinuate-mh)
	* lisp/bbdb-vm.el (bbdb-insinuate-vm): Fix docstring.

2011-04-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mode-map): Do no call set-keymap-parent which
	is done already by define-derived-mode.  Reported by Sam Steingold
	<sds@gnu.org>.  Add menu binding for revert-buffer.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-create-hook, bbdb-change-hook): Use defvar.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-time-stamp-format): Includes timezone info.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* TODO: New file.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-faces): Group of faces used by BBDB.
	(bbdb-name, bbdb-organization, bbdb-field-name): New faces.
	(bbdb-display-name-organization, bbdb-display-record-one-line)